Replace deprecated new Boolean with Boolean.valueOf
Change-Id: I124ff2dbc73711c324c4a1084b6249d6bcf645d0
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>